'Fix squashed fonts.'

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-    max-width: 940px;
+    max-width: 60%;
     padding: 20px 10px;
     margin: 0 auto;
     background: #f5f5f5;
@@ -70,6 +70,8 @@ h3 {
 
 p {
     margin: 0 0 1em;
+    letter-spacing : 0 !important;
+    word-spacing : 0 !important;
 }
 
 /* Lists
